# OpenGL

./: .gitmodules  CMakeLists.txt
Core/: CMakeLists.txt
Core/includes/Core/: Application.h  Camera.h  Event.h  Log.h
Core/src/Core/: Application.cpp  Camera.cpp  Window.cpp  Window.h
Core/src/Core/Rendering/OpenGL/: IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Editor/: CMakeLists.txt
Editor/src/: main.cpp
resource/shaders/: vertex.txt
resources/: colors.fs  colors.vs  light_cube.fs  light_cube.vs  shader.fs  shader.vs
src/: Camera.cpp  Camera.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
